# ljmu_dissertation

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: placeholder.md
notebooks/: 01_load_and_inspect_datasets.ipynb  02_clean_and_prepare_samples.ipynb  02b_corpus_visualizations.ipynb  03_chunk_documents.ipynb  03a_diagnose_qa_splitter.ipynb  03b_inspect_current_prepared_remarks.ipynb  04_bm25_baseline.ipynb  04_golden_dataset.ipynb  05_dense_baseline.ipynb  06_hybrid_rrf.ipynb  07_generation.ipynb  08_evaluation.ipynb  n300_retrieval_robustness.ipynb
src/chunking/: __init__.py  chunkers.py
src/data_loading/: loaders.py
src/evaluation/: __init__.py  evaluator.py
src/generation/: __init__.py  generator.py
src/preprocessing/: cleaners.py
src/retrieval/: bm25_retriever.py  dense_retriever.py  golden_dataset_builder.py  hybrid_retriever.py
tests/: test_bm25.py  test_chunking.py  test_dense.py  test_evaluation.py  test_generation.py  test_golden_dataset.py  test_hybrid.py  test_preprocessing.py
