[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets==3.6.0",
    "faiss-cpu>=1.14.2",
    "huggingface-hub>=1.12.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "openai>=2.38.0",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.4.1",
    "tqdm>=4.67.3",
]
